updated index.html with new about button updated about.html to have a proper design updated token.html to have a proper design

--- a/webservice-frontend/app/views/token.html
+++ b/webservice-frontend/app/views/token.html
@@ -1,1 +1,69 @@
-<p>This is the token view.</p>
+
+<div class="row">
+
+<div class="col-md-4">
+		<div class="info-box bg-yellow">
+            <span class="info-box-icon"><img src="views/profile1.png" align="right" ></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Bugs Bunny</span>
+              <span class="info-box-number"><font size="4">...83235fa4bf</font></span>
+
+              <div class="progress">
+                <div class="progress-bar" style="width: 20%"></div>
+              </div>
+                  <span class="progress-description">
+                    20% queries left
+                  </span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+	</div>	
+	
+	<div class="col-md-4">
+
+		<div class="info-box bg-yellow">
+            <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Inventory</span>
+              <span class="info-box-number">5,200</span>
+
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%"></div>
+              </div>
+                  <span class="progress-description">
+                    50% Increase in 30 Days
+                  </span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+	</div>	
+	<div class="col-md-4">
+
+		<div class="info-box bg-yellow">
+            <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Inventory</span>
+              <span class="info-box-number">5,200</span>
+
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%"></div>
+              </div>
+                  <span class="progress-description">
+                    50% Increase in 30 Days
+                  </span>
+            </div>
+            <!-- /.info-box-content -->
+        </div>
+	</div>	
+	
+	<div class="col-md-4">
+		<a href='javascript:window.prompt("Enter AccessToken here","AccessToken");'>
+        <span class="info-box-icon"><i class="ion ion-android-add"></i></span>
+	</a>
+   
+	</div>		
+</div>		  
+
