--- a/webservice-frontend/app/views/about.html
+++ b/webservice-frontend/app/views/about.html
@@ -1,171 +1,140 @@
+<!-- about project row -->
+<div class="row">
+	<div class="col-sm-12 text-center">
+		<h1 class="page-header"><i class="fa fa-globe"></i> About the Project</h1>
+		<p>
+			This is a Project of the University of Duisburg-Essen.<br>
+			19 Students created a tool for analyzing Big-Data-Streams <br>
+			from Social Media, especially Instagram. This tool can connect <br>
+			to the Instagram Api and retrieve you all the Information <br>
+			from the Instagram Endpoints. They will be stored in a Database <br>
+			and you can analyze it even in realtime or for future analysis.
+			<br><br>
+		</p>
+	</div><!-- /.col -->
+</div><!-- /.row -->
+		  
+<div class="row">
 
+	<div class="col-sm-12">
+		<h2 class="page-header text-center"><i class="fa fa-group"></i> Our Team</h2>
+	</div>
 
-        <!-- Main content -->
-        
-		
-		<section class="invoice">
-          <!-- title row -->
-          <div class="row">
-            <div class="col-xs-12">
-              <h2 class="page-header">
-                <i class="fa fa-globe"></i> Short Description
-              </h2>
-            </div><!-- /.col -->
-          </div>
-          <!-- info row -->
-          <div class="row invoice-info">
-            <div class="col-sm-12 invoice-col">
-              <p>
-                
-                This is a Project of the University of Duisburg-Essen.<br>
-				19 Students created a tool for analyzing Big-Data-Streams <br>
-				from Social Media, especially Instagram. This tool can connect <br>
-				to the Instagram Api and retrieve you all the Information <br>
-				from the Instagram Endpoints. They will be stored in a Database <br>
-				and you can analyze it even in realtime or for future analysis.
-				
-			  </p>
-            </div><!-- /.col -->  
-          </div><!-- /.row -->
-			<div class="row invoice-info">
-            <div class="col-sm-6 invoice-col">
-              <h2 class="page-header">
-                <i class="fa fa-group"></i> Teams			
-              </h2>
-			   <div class="box box-primary">
-			   <div class="box-header with-border">
-                  <h3 class="box-title"><strong>Tracking Service</strong></h3>
-                </div><!-- /.box-header -->
-                <div class="box-body box-profile">
-				<div class="col-sm-2 invoice-col">
-                  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Salah Beck</h3>
-					</div>
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Vincent Nelius</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Prasad Bhambure</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Florian Wenzel</h3>
-				</div><!-- /.col -->
-				</div><!-- /.box-body -->
-			  <div class="box box-primary">
-			   <div class="box-header with-border">
-                  <h3 class="box-title"><strong>Data-Link Layer</strong></h3>
-                </div><!-- /.box-header -->
-                <div class="box-body box-profile">
-				<div class="col-sm-2 invoice-col">
-                  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Jan Kowollik</h3>
-					</div>
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Jannik Stach</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Maik Wosnitzka</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Oskar Carl</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Noornabi Mohmand</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Firas Sabbah</h3>
-				</div><!-- /.col -->
-				</div><!-- /.box-body -->
-				<div class="box box-primary">
-			   <div class="box-header with-border">
-                  <h3 class="box-title"><strong>Big-Data Framework</strong></h3>
-                </div><!-- /.box-header -->
-                <div class="box-body box-profile">
-				<div class="col-sm-2 invoice-col">
-                  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Khaled Hossain</h3>
-					</div>
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Md Masum Billah</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Md Ariful Islam</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Qadir Abdul Hussain</h3>
-				</div><!-- /.col -->
-				</div><!-- /.box-body -->
-				<div class="box box-primary">
-			   <div class="box-header with-border">
-                  <h3 class="box-title"><strong>Database</strong></h3>
-                </div><!-- /.box-header -->
-                <div class="box-body box-profile">
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Janine Neffgen</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Romina Barth</h3>
-				</div><!-- /.col -->
-				<div class="col-sm-2 invoice-col">
-				  <img class="profile-user-img img-responsive img-circle" src="/../../images/avatar5.jpg" alt="User profile picture">
-                  <h3 class="profile-username text-center">Marc Henning</h3>
-				</div><!-- /.col -->
-				</div><!-- /.box-body -->
-			  </div><!-- /.box -->
-			  </div>
-			  </div>
-			  </div>
-			  </div>
-			  
-			  
-			  
-			  
-			  
-			  
-			  
-            </div><!-- /.col -->
-          </div>
-		 <div class="row">
-            <div class="col-xs-12">
-              <h2 class="page-header">
-                <i class="fa fa-arrow-circle-right"></i> Credits
-              </h2>
-			  <div class="col-sm-4">
-			  
-			  Credits to the open source project AdminLTE by Almsaeed Studio.
-			  </div>
-            </div><!-- /.col -->
-          </div>
-		   <div class="row">
-            <div class="col-xs-12">
-              <h2 class="page-header">
-                <i class="fa fa-cloud"></i> License Information
-              </h2>
-			  <div class="col-sm-4">
-				Copyright &copy; 2016 Tracking Titans/Almasaeed Studio. <br> <br>
-				Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-				above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. <br> <br>
-				THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-			  
-			  
-			  </div>
-            </div><!-- /.col -->
-          </div>
-        <div class="clearfix"></div>
-      </div><!-- /.content-wrapper -->
+	<ul class="users-list clearfix">
+		<ul class="users-list clearfix">
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Salah Beck</h3>
+				<p>Tracking Service</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Vincent Nelius</h3>
+				<p>Tracking Service</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Prasad Bhambure</h3>
+				<p>Tracking Service</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Florian Wenzel</h3>
+				<p>Tracking Service</p>
+			</li>
+		</ul>
+		<ul class="users-list clearfix">
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Jan Kowollik</h3>
+				<p>Data-Link Layer</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Jannik Stach</h3>
+				<p>Data-Link Layer</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Maik Wosnitzka</h3>
+				<p>Data-Link Layer</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Oskar Carl</h3>
+				<p>Data-Link Layer</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Noornabi Mohmand</h3>
+				<p>Data-Link Layer</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Firas Sabbah</h3>
+				<p>Data-Link Layer</p>
+			</li>
+		</ul>
+		<ul class="users-list clearfix">
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Khaled Hossain</h3>
+				<p>Big-Data Framework</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Md Masum Billah</h3>
+				<p>Big-Data Framework</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Md Ariful Islam</h3>
+				<p>Big-Data Framework</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Qadir Abdul Hussain</h3>
+				<p>Big-Data Framework</p>
+			</li>
+		</ul>
+		<ul class="users-list clearfix">
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Janine Neffgen</h3>
+				<p>Database</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Romina Barth</h3>
+				<p>Database</p>
+			</li>
+			<li>
+				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<h3>Marc Henning</h3>
+				<p>Database</p>
+			</li>
+		</ul>
+	</ul>  
+</div><!-- /.col -->
+
+<!-- copyright row -->
+ <div class="row">
+	<div class="col-sm-12">
+		<h2 class="page-header"><i class="fa fa-arrow-circle-right"></i> Credits</h2>
+		<p>
+			Credits to the open source project AdminLTE by Almsaeed Studio.<br>
+			Thank you for making our lives a whole lot easier.
+			<br><br>
+		</p>
+		<h2 class="page-header"><i class="fa fa-cloud"></i> License Information</h2>
+		<p>
+			Copyright &copy; 2016 Tracking Titans/2014-2015 Almsaeed Studio. <br> <br>
+			Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+			above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. <br> <br>
+			THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.  
+		</p>
+	</div><!-- /.col -->
+</div><!-- /.row -->
 
 
    
