--- a/webservice-frontend/app/views/token.html
+++ b/webservice-frontend/app/views/token.html
@@ -1,69 +1,145 @@
-
+<!-- application settings header -->
 <div class="row">
+	<div class="col-sm-12">
+		<h1 class="page-header"><i class="fa fa-gear"></i> Edit Client</h1>
+	</div>
+</div>	
 
-<div class="col-md-4">
-		<div class="info-box bg-yellow">
-            <span class="info-box-icon"><img src="views/profile1.png" align="right" ></i></span>
+<!-- application settings content -->
+<div class="row">
+	<div class="col-sm-12">
+		<div class="box box-primary">
+			<div class="box-header with-border">
+				<h3 class="box-title">Client Info</h3>
+				<div class="box-tools pull-right">
+					<button class="btn btn-box-tool" data-widget="collapse" type="button">
+						<i class="fa fa-minus"></i>
+					</button>
+				</div>
+			</div>
+			<form class="form-horizontal">
+				<div class="box-body">
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputClientId">Client Id</label>
+						<div class="col-sm-10">
+							<input id="inputClientId" class="form-control" value=" 68b960897e8540c7ba0d4218fd0f64bf"></input>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputClientSecret">Client Secret</label>
+						<div class="col-sm-10">
+							<input id="inputClientSecret" class="form-control" value=" 8465494e5e7e4d719dbe00459f7fd985"></input>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputCallback">Callback URI</label>
+						<div class="col-sm-10">
+							<input id="inputCallback" class="form-control" value=" http://localhost"></input>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputScope">Scope</label>
+						<div class="col-sm-10">
+							<input id="inputScope" class="form-control" value=" basic"></input>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputConnectTimeout">Connection Timeout in ms</label>
+						<div class="col-sm-10">
+							<input id="inputConnectTimeout" class="form-control" value=" 1000"></input>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="inputReadTimeout">Read Timeout in ms</label>
+						<div class="col-sm-10">
+							<input id="inputReadTimeout" class="form-control" value=" 1000"></input>
+						</div>
+					</div>
+				</div>
+				<div class="box-footer">
+					<button class="btn btn-primary" type="submit">Update</button>
+					<button class="btn btn-default" type="submit">Cancel</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 
+<!-- accesstoken header -->
+<div class="row">
+	<div class="col-sm-12">
+		<h1 class="page-header"><i class="fa fa-user"></i> Manage Users</h1>
+	</div>
+</div>
+
+<!-- accesstoken content -->
+<div class="row">
+	<div class="col-md-4">
+		<div class="info-box bg-orange">
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right" ></img></span>
             <div class="info-box-content">
               <span class="info-box-text">Bugs Bunny</span>
-              <span class="info-box-number"><font size="4">...83235fa4bf</font></span>
-
+				<span class="info-box-number">...83235fa4bf
+					<button class="btn btn-xs btn-danger pull-right" type="button">
+						<i class="fa fa-trash"></i>
+					</button>
+				</span>
               <div class="progress">
                 <div class="progress-bar" style="width: 20%"></div>
               </div>
                   <span class="progress-description">
-                    20% queries left
+                    100/500 requests made this hour 
                   </span>
             </div>
-            <!-- /.info-box-content -->
-        </div>
-	</div>	
-	
-	<div class="col-md-4">
-
-		<div class="info-box bg-yellow">
-            <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
-
-            <div class="info-box-content">
-              <span class="info-box-text">Inventory</span>
-              <span class="info-box-number">5,200</span>
-
-              <div class="progress">
-                <div class="progress-bar" style="width: 50%"></div>
-              </div>
-                  <span class="progress-description">
-                    50% Increase in 30 Days
-                  </span>
-            </div>
-            <!-- /.info-box-content -->
         </div>
 	</div>	
 	<div class="col-md-4">
 
-		<div class="info-box bg-yellow">
-            <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
+		<div class="info-box bg-orange">
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Inventory</span>
-              <span class="info-box-number">5,200</span>
+				<span class="info-box-text">User 2</span>
+				<span class="info-box-number">...0123456789
+					<button class="btn btn-xs btn-danger pull-right" type="button">
+						<i class="fa fa-trash"></i>
+					</button>
+				</span>
+				<div class="progress">
+					<div class="progress-bar" style="width: 50%"></div>
+				</div>
+                <span class="progress-description">
+					250/500 requests made this hour 
+                </span>
+            </div>
+        </div>
+	</div>	
+	<div class="col-md-4">
 
+		<div class="info-box bg-orange">
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Another User</span>
+              <span class="info-box-number">...0123456789
+				<button class="btn btn-xs btn-danger pull-right" type="button">
+						<i class="fa fa-trash"></i>
+				</button>
+			  </span>
               <div class="progress">
-                <div class="progress-bar" style="width: 50%"></div>
+                <div class="progress-bar" style="width: 80%"></div>
               </div>
                   <span class="progress-description">
-                    50% Increase in 30 Days
+                     400/500 requests made this hour 
                   </span>
             </div>
             <!-- /.info-box-content -->
         </div>
-	</div>	
-	
+	</div>		
 	<div class="col-md-4">
 		<a href='javascript:window.prompt("Enter AccessToken here","AccessToken");'>
         <span class="info-box-icon"><i class="ion ion-android-add"></i></span>
 	</a>
    
 	</div>		
-</div>		  
-
+</div>
