--- a/webservice-frontend/app/views/database.html
+++ b/webservice-frontend/app/views/database.html
@@ -1,95 +1,186 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript">
-		
-		$( '#search' ).click(function()
-		{
-			var id =$('input[name=message]').val(); 
-			if(id !== "")
-				{
-					$('#display').fadeIn(1000);
-					$('#display').html(id);
-					$('input[name=message]').val("");
-				}
-			else
-				{
-					alert("Enter some Query....!!");
-				}
-		});
-	</script>
-    	
-	<style type="text/css">
-		#display{
-
-			height: 400px;
-			width: 1100px;
-			border: 1px solid #525354;
-			margin-top: 45px;
-			color: #234455;
-			display:none;
-			padding:20px;
-			font-style: BOld;
-			font-size: 18px;
-		}
-		#custom-search-input {
-			margin:0;
-			margin-top: 10px;
-			padding: 0;
-		}
-	 
-		#custom-search-input .search-query {
-			padding-right: 3px;
-			padding-right: 4px \9;
-			padding-left: 3px;
-			padding-left: 4px \9;
-			margin-bottom: 0;
-			-webkit-border-radius: 3px;
-			-moz-border-radius: 3px;
-			border-radius: 3px;
-		}
-	 
-		#custom-search-input button {
-			border: 0;
-			background: none;
-			padding: 2px 5px;
-			margin-top: 2px;
-			position: relative;
-			left: -28px;
-			margin-bottom: 0;
-			-webkit-border-radius: 3px;
-			-moz-border-radius: 3px;
-			border-radius: 3px;
-			color:#D9230F;
-		}
-	 
-		.search-query:focus + button {
-			z-index: 3;   
-		}
-
-	</style>
-</head>
-<body>
-	<div>
-		<form action=" ">
-			<div class="container">
-				<div class="row">
-					<div id="custom-search-input">
-						<div class="input-group col-md-6">
-							<input type="text" class="  search-query form-control" name='message' placeholder="Enter the query..." />
-							<span class="input-group-btn">
-								<input class="btn btn-danger" id='search' type="button" value='Search' />                                       
-							</span>
+<div class="row">
+	<div class="col-sm-2">
+		<h2 class="page-header">Database Information</h2>
+		<div class="box box-primary">
+			<div class="box-body">
+				<div class="form-group">
+					<label>Select Database</label>
+					<select class="form-control select2" style="width: 100%;" tabindex="-1">
+						<option>Database 1</option>
+						<option>Database 2</option>
+						<option>Database 3</option>
+					</select>
+				</div>
+				<hr>
+				<p>Name: Database Name</p>
+				<p>Adress: name@xy:port</p>
+				<hr>
+				<label>Tables</label>
+				<div class="box-group">
+					<div class="panel box box-primary">
+						<div class="box-header with-border">
+							<h4 class="box-title"><a data-target="#collapseOne" data-parent="#accordion" data-toggle="collapse">Table 1</a></h4>
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse in">
+							<div class="box-body">
+								Columns<br>
+								Column 1<br>
+								Column 2<br>
+							</div>
+						</div>
+					</div>
+					<div class="panel box box-primary">
+						<div class="box-header with-border">
+							<h4 class="box-title"><a data-target="#collapseTwo" data-parent="#accordion" data-toggle="collapse">Table 2</a></h4>
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse in">
+							<div class="box-body">
+								Columns<br>
+								Column 1<br>
+								Column 2<br>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</form>
-		
-		<div id="display"></div>
+		</div>
 	</div>
+	
+	<div class="col-sm-10">
+		<div class="row">
+			<div class col-sm-12">
+				<h2 class="page-header">Query Settings</h2>
+				<div class="nav-tabs-custom">
+					<ul class="nav nav-tabs">
+						<li class="active">
+							<a data-toggle="tab" data-target="#tab_1">Select</a>
+						<li>
+						<li>
+							<a data-toggle="tab" data-target="#tab_2">Insert</a>
+						<li>
+						<li>
+							<a data-toggle="tab" data-target="#tab_3">Update</a>
+						<li>
+						<li>
+							<a data-toggle="tab" data-target="#tab_4">Delete</a>
+						<li>
+						<li>
+							<a data-toggle="tab" data-target="#tab_5">Create / Alter Table</a>
+						<li>
+					</ul>
+					<div class="tab-content">
+						<div id="tab_1" class="tab-pane active">
+							<div class="row">
+								<div class="col-sm-8">
+									<div class="form-group">
+										<label>Select</label>
+										<select class="form-control select2" multiple="multiple" style="width: 100%;" tabindex="-1">
+											<option>Field 1</option>
+											<option>Field 2</option>
+											<option>Field 3</option>
+										</select>
+									</div>
+								</div>
+								<div class="col-sm-4">
+									<div class="form-group">
+										<label>From</label>
+										<select class="form-control select2" style="width: 100%;" tabindex="-1">
+											<option>Database 1</option>
+											<option>Database 2</option>
+											<option>Database 3</option>
+										</select>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+									<label class="col-sm-12">Where<label>
+							</div>
+							<div class="row">
+								<div class="col-sm-1">
+									<button class="btn btn-sm btn-default pull-right" type="button">
+										<i class="fa fa-remove"></i>
+									</button>
+								</div>
+								<div class="col-sm-5">
+									<select class="form-control select2" style="width: 100%;" tabindex="-1">
+											<option>Database 1</option>
+											<option>Database 2</option>
+											<option>Database 3</option>
+									</select>
+								</div>
+								<div class="col-sm-1">
+									<select class="form-control select2" style="width: 100%;" tabindex="-1">
+											<option><</option>
+											<option>></option>
+											<option>=</option>
+									</select>
+								</div>
+								<div class="col-sm-5">
+									<input class="form-control"></input>
+								</div>	
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-6">
+									<button class="btn btn-primary" type="button">Execute</button>
+									<button class="btn btn-default" type="button">Clear</button>
+								</div>
+								<div class="col-sm-6">
+									<label>Add</label>
+									<button class="btn btn-default" type="button">Condition</button>
+									<button class="btn btn-default" type="button">Sorting</button>
+								</div>
+							</div>
+						</div>
+						<div id="tab_2" class="tab-pane">
+							<b>Insert</b>
+						</div>
+						<div id="tab_3" class="tab-pane">
+							<b>Update</b>
+						</div>
+						<div id="tab_4" class="tab-pane">
+							<b>Delete</b>
+						</div>
+						<div id="tab_5" class="tab-pane">
+							<b>Create / Alter Table</b>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12 no-padding">
+				<h2 class="page-header">Result</h2>
+				<div class="box box-primary">
+					<div class="box-header">
+						<h3 class="box-title">Table</h3>
+					</div>
+					<div class="box-body table-responsive no-padding">
+						<table class="table table-hover table-bordered">
+							<tbody>
+								<tr>
+									<th>ID</th>
+									<th>User 1</th>
+									<th>follows</th>
+									<th>User 2</th>
+								</tr>
+								<tr>
+									<td>ID</td>
+									<td>Name 1</td>
+									<td><i class="fa fa-check"></i></td>
+									<td>Name 2</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
-</body>
-</html>
+<script>
+	$(function(){
+		$(".select2").select2({});
+	});
+</script>
