--- a/webservice-frontend/app/views/database.html
+++ b/webservice-frontend/app/views/database.html
@@ -97,16 +97,18 @@
 							</div>
 							<div class="row">
 								<div class="col-sm-1">
-									<button class="btn btn-sm btn-default pull-right" type="button">
+									<button class="btn btn-flat btn-default pull-right" type="button">
 										<i class="fa fa-remove"></i>
 									</button>
 								</div>
 								<div class="col-sm-5">
+									<div class="form-group">
 									<select class="form-control select2" style="width: 100%;" tabindex="-1">
 											<option>Database 1</option>
 											<option>Database 2</option>
 											<option>Database 3</option>
 									</select>
+									</div>
 								</div>
 								<div class="col-sm-1">
 									<select class="form-control select2" style="width: 100%;" tabindex="-1">
