--- a/webservice-frontend/app/views/database.html
+++ b/webservice-frontend/app/views/database.html
@@ -104,9 +104,9 @@
 								<div class="col-sm-5">
 									<div class="form-group">
 									<select class="form-control select2" style="width: 100%;" tabindex="-1">
-											<option>Database 1</option>
-											<option>Database 2</option>
-											<option>Database 3</option>
+											<option>Field 1</option>
+											<option>Field 2</option>
+											<option>Field 3</option>
 									</select>
 									</div>
 								</div>
