--- a/webservice-frontend/app/views/token.html
+++ b/webservice-frontend/app/views/token.html
@@ -75,13 +75,13 @@
 <!-- accesstoken content -->
 <div class="row">
 	<div class="col-md-4">
-		<div class="info-box bg-orange">
+		<div class="info-box bg-light-blue">
             <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right" ></img></span>
             <div class="info-box-content">
               <span class="info-box-text">Bugs Bunny</span>
-				<span class="info-box-number">...83235fa4bf
-					<button class="btn btn-xs btn-danger pull-right" type="button">
-						<i class="fa fa-trash"></i>
+				<span class="info-box-number">...84654654883235fa4bf
+					<button class="btn btn-sm bg-light-blue pull-right" type="button">
+						<i class="fa fa-remove"></i>
 					</button>
 				</span>
               <div class="progress">
@@ -95,14 +95,14 @@
 	</div>	
 	<div class="col-md-4">
 
-		<div class="info-box bg-orange">
+		<div class="info-box bg-light-blue">
             <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
 
             <div class="info-box-content">
 				<span class="info-box-text">User 2</span>
 				<span class="info-box-number">...0123456789
-					<button class="btn btn-xs btn-danger pull-right" type="button">
-						<i class="fa fa-trash"></i>
+					<button class="btn btn-sm bg-light-blue pull-right" type="button">
+						<i class="fa fa-remove"></i>
 					</button>
 				</span>
 				<div class="progress">
@@ -116,14 +116,14 @@
 	</div>	
 	<div class="col-md-4">
 
-		<div class="info-box bg-orange">
+		<div class="info-box bg-light-blue">
             <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Another User</span>
               <span class="info-box-number">...0123456789
-				<button class="btn btn-xs btn-danger pull-right" type="button">
-						<i class="fa fa-trash"></i>
+				<button class="btn btn-sm bg-light-blue pull-right" type="button">
+						<i class="fa fa-remove"></i>
 				</button>
 			  </span>
               <div class="progress">
