--- a/webservice-frontend/app/views/request.html
+++ b/webservice-frontend/app/views/request.html
@@ -1,1 +1,66 @@
-<p>This is the request view.</p>
+<div class="row">
+	<div class="col-sm-2">
+		<h2 class="page-header">Endpoints<h2>
+		<div class="info-box">
+			<a href="#/request/users"><span class="info-box-icon bg-red"><i class="fa fa-user"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Users</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/relationships"><span class="info-box-icon bg-red"><i class="fa fa-users"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Relationships</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/media"><span class="info-box-icon bg-red"><i class="fa fa-camera-retro"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Media</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/comments"><span class="info-box-icon bg-red"><i class="fa fa-comments"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Comments</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/likes"><span class="info-box-icon bg-red"><i class="fa fa-thumbs-o-up"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Likes</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/tags"><span class="info-box-icon bg-red"><i class="fa fa-tag"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Tags</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+		<div class="info-box">
+			<a href="#/request/locations"><span class="info-box-icon bg-red"><i class="fa fa-compass"></i></span></a>
+			<div class="info-box-content">
+				<span class="info-box-number">Locations</span>
+			</div><!-- /.info-box-content -->
+		</div><!-- /.info-box -->
+	</div>
+	
+	<div class="col-sm-10">
+		<div class="row">
+			<div class="col-sm-12">
+				<h2 class="page-header">Query Settings<h2>
+				<div class="content-wrapper">
+					<!-- Main content -->
+					<section class="content">
+						<div app-view-segment="1"></div>
+					</section><!-- /.content -->
+				</div><!-- /.content-wrapper -->
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h2 class="page-header">Results<h2>
+			</div>
+		</div>
+	</div>
+</div>
