--- a/webservice-frontend/app/views/token.html
+++ b/webservice-frontend/app/views/token.html
@@ -80,7 +80,7 @@
             <div class="info-box-content">
               <span class="info-box-text">Bugs Bunny</span>
 				<span class="info-box-number">...84654654883235fa4bf
-					<button class="btn btn-sm bg-light-blue pull-right" type="button">
+					<button class="btn btn-xs bg-light-blue pull-right" type="button">
 						<i class="fa fa-remove"></i>
 					</button>
 				</span>
@@ -101,7 +101,7 @@
             <div class="info-box-content">
 				<span class="info-box-text">User 2</span>
 				<span class="info-box-number">...0123456789
-					<button class="btn btn-sm bg-light-blue pull-right" type="button">
+					<button class="btn btn-xs bg-light-blue pull-right" type="button">
 						<i class="fa fa-remove"></i>
 					</button>
 				</span>
@@ -122,7 +122,7 @@
             <div class="info-box-content">
               <span class="info-box-text">Another User</span>
               <span class="info-box-number">...0123456789
-				<button class="btn btn-sm bg-light-blue pull-right" type="button">
+				<button class="btn btn-xs bg-light-blue pull-right" type="button">
 						<i class="fa fa-remove"></i>
 				</button>
 			  </span>
